# esp32-rc-controller

./: .gitignore  CHANGELOG.md  README.md  install.html  partitions_4mb.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: nightly-release.yml  release.yml
components/ESP32Servo/: CMakeLists.txt
data/: index.html
docs/: FLASHING.md  SPECIFICATIONS.md  USER_GUIDE.md  install.html
latest/: manifest-esp32dev.json
main/: CMakeLists.txt  control_inputs.cpp  control_inputs.h  json_utils.cpp  json_utils.h  preset_service.cpp  preset_service.h  preset_store.cpp  preset_store.h  rc_model.cpp  rc_model.h  runtime_loop.cpp  runtime_loop.h  sketch.cpp  state_service.cpp  state_service.h  web_routes.cpp  web_routes.h  web_ui.cpp  web_ui.h
releases/nightly-20260430-2022/: manifest-esp32-s3-devkitc-1.json  rc-controller-esp32dev-meta.json
releases/nightly-20260430-2033/: manifest-esp32-s3-devkitc-1.json  manifest-esp32dev.json  rc-controller-esp32-s3-devkitc-1-meta.json
releases/nightly-20260430-2057/: manifest-esp32-s3-devkitc-1.json  manifest-esp32dev.json
releases/nightly-20260430-2112/: manifest-esp32-s3-devkitc-1.json  manifest-esp32dev.json
releases/nightly-20260501-0551/: manifest-esp32-s3-devkitc-1.json  manifest-esp32dev.json
releases/nightly-20260502-0521/: manifest-esp32-s3-devkitc-1.json  manifest-esp32dev.json
releases/nightly-20260503-0540/: manifest-esp32-s3-devkitc-1.json  manifest-esp32dev.json
releases/nightly-20260504-0545/: manifest-esp32-s3-devkitc-1.json  manifest-esp32dev.json
releases/v0.1.0/: manifest-esp32-s3-devkitc-1.json  (+1 more)
(+30 files in other folders)
